hphp/test/slow/break_statement/badexp.php.expectf
HipHop Fatal error: 'break' operator with non-constant operand is no longer supported in %s on line 6